@@ -8,6 +8,9 @@ description = "typify macro implementation"
 repository = "https://github.com/oxidecomputer/typify"
 readme = "../README.md"
 
+[lib]
+proc-macro = true
+
 [dependencies]
 proc-macro2 = "1.0"
 quote = "1.0"
@@ -17,6 +20,3 @@ serde_json = "1.0"
 serde_tokenstream = "0.1.6"
 syn = "1.0"
 typify-impl = { version = "0.0.11-dev", path = "../typify-impl" }
-
-[lib]
-proc-macro = true
